<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:visibility="visible"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_click_record"
        android:gravity="center"
        android:id="@+id/tv_des"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_record_button_record_free"
            android:layout_gravity="center"
            android:contentDescription="@string/text_huge_record"
            android:id="@+id/ib_start_intercom"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/text_record"
        android:gravity="center"/>




</LinearLayout>