<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="?attr/actionBarSize">
    <com.wenshao.chat.view.DrawableCenterTextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/tv_search"
        android:background="@drawable/shape_circular_text_view"
        android:text="@string/text_search"
        android:layout_margin="10dp"
        android:drawableLeft="@mipmap/ic_action_search"
        android:drawableStart="@mipmap/ic_action_search"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/ic_action_blue_user"
            android:layout_weight="1"
            android:text="@string/text_new_friend"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/ic_action_blue_users"
            android:layout_weight="1"
            android:text="@string/text_group_chat"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/ic_action_blue_bulb"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/text_official_accounts"
            android:textColor="@android:color/black"

            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/graySearch"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/spl_refresh">

        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/elv_user_list"
            android:layout_gravity="center"
            android:gravity="center">

        </ExpandableListView>
    </android.support.v4.widget.SwipeRefreshLayout>





</LinearLayout>